--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./src/app.js",
-    "start-dev": "npx nodemon ./src/app.js"
+    "start-dev": "nodemon ./src/app.js"
   },
   "repository": {
     "type": "git",
@@ -23,13 +23,15 @@
   },
   "homepage": "https://github.com/taufanAli65/NutriSense-Capstone#readme",
   "dependencies": {
-    "dotenv": "^16.4.5",
-    "express": "^4.21.1",
-    "nodemon": "^3.1.7",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
+    "firebase": "^11.0.2",
+    "firebase-admin": "^13.0.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "nodemon": "^3.1.7"
   }
 }
