--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "debug": "~2.6.9",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "express-rate-limit": "^7.4.1",
     "firebase": "^11.0.2",
     "firebase-admin": "^13.0.0",
     "http-errors": "~1.6.3",
