--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "firebase-admin": "^13.0.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "moment": "^2.30.1",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.16",
